2008-10-30  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.CSharpBinding/CodeCompletionBugTests.cs: added test for
	'Bug 432434 - Code completion doesn't work with subclasses'.

2008-10-29  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.CSharpBinding/CodeCompletionTests.cs:
	* MonoDevelop.CSharpBinding/CodeCompletionBugTests.cs:
	* MonoDevelop.CSharpBinding/CodeCompletionCSharpTests.cs:
	* MonoDevelop.CSharpBinding/CodeCompletionCSharp3Tests.cs:
	* MonoDevelop.CSharpBinding/CodeCompletionOperatorTests.cs:
	* MonoDevelop.CSharpBinding/CodeCompletionAccessibleTests.cs: Added some
	unit tests.

2008-10-29  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.CSharpBinding/CodeCompletionTests.cs: added  unit test for
	"Bug 439601 - Intellisense Broken For Partial Classes".

2008-10-27  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.CSharpBinding/ParameterCompletionTests.cs: fixed a bug in
	unit tests.

2008-10-27  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.CSharpBinding/ParameterCompletionTests.cs: Added test for
	"Bug 434705 - No autocomplete offered if not assigning result of
	'new' to a variable".

2008-10-23  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.Xml.StateEngine/TestParser.cs: Track error API.

2008-10-23  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.CSharpBinding/TopLevelTests.cs: Added attribute parsing
	tests.

	* MonoDevelop.Projects/MSBuildTests.cs: Added test for merging of
	configuration properties.

2008-10-19  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.CSharpBinding/ParameterCompletionTests.cs: made attribute
	unit test a bit harder.

2008-10-16  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.CSharpBinding/CodeCompletionAccessibleTests.cs: Added some
	unit tests.

2008-10-16 Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.CSharpBinding/ParameterCompletionTests.cs: Added unit test
	for 'Bug 434701 - No autocomplete in attributes'.

2008-10-16 Mike Krüger  <mkrueger@novell.com>
